Cambios en nombres por incompatibilidad

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <h1>¡Bienvenido al Bingo Online! 🎰</h1>
         <p>Diviértete jugando al bingo con tus amigos y familiares. ¡Genera tus cartones y compite por ganar! 🏆</p>
         <div class="actions">
-            <a href="{{ url_for('registro') }}" class="btn">Regístrate 🎲</a>
+            <a href="{{ url_for('register') }}" class="btn">Regístrate 🎲</a>
             <a href="{{ url_for('login') }}" class="btn">Inicia Sesión 🎱</a>
         </div>
     </div>
