--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
 
             <button type="submit">🔑 Iniciar Sesión</button>
         </form>
-        <p>¿No tienes una cuenta? <a href="{{ url_for('registro') }}">📝 Regístrate aquí</a>.</p>
+        <p>¿No tienes una cuenta? <a href="{{ url_for('register') }}">📝 Regístrate aquí</a>.</p>
     </div>
 </body>
 </html>
