--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔑 Iniciar Sesión</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
+    <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"></head>
 <body>
     <div class="container">
         <h1>🔑 Iniciar Sesión</h1>
-        <!-- Formulario de inicio de sesión -->
         <form method="POST">
             <label for="username">👤 Nombre de usuario:</label>
             <input type="text" id="username" name="username" required placeholder="Escribe tu nombre de usuario">
@@ -19,7 +17,7 @@
 
             <button type="submit">🔑 Iniciar Sesión</button>
         </form>
-        <p>¿No tienes una cuenta? <a href="{{ url_for('register') }}">📝 Regístrate aquí</a>.</p>
+        <p>¿No tienes una cuenta? <a href="{{ url_for('registroRuta') }}">📝 Regístrate aquí</a>.</p>
     </div>
 </body>
 </html>
