--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bingo Online 🎉</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>pagina principal</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"></head>
 <body>
-    <div class="container">
-        <div class="emoticon">🎉</div>
-        <h1>¡Bienvenido al Bingo Online! 🎰</h1>
-        <p>Diviértete jugando al bingo con tus amigos y familiares. ¡Genera tus cartones y compite por ganar! 🏆</p>
-        <div class="actions">
-            <a href="{{ url_for('register') }}" class="btn">Regístrate 🎲</a>
-            <a href="{{ url_for('login') }}" class="btn">Inicia Sesión 🎱</a>
-        </div>
+<div class="container">
+    <h1>¡Bienvenido al Bingo Online!</h1>
+    <p>Diviértete jugando al bingo con tus amigos y familiares. ¡Genera tus cartones y compite por ganar!</p>
+    <div class="actions">
+        <a href="{{ url_for('registroRuta') }}">Registrate</a>
+        <a href="{{ url_for('loginRuta') }}">Inicia Sesión</a>
     </div>
+</div>
 </body>
 </html>
